[package]
name = "frankensearch-lexical"
version = "0.2.1"
description = "Tantivy BM25 full-text search integration for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
tempfile = "3"
criterion = { workspace = true }
tantivy = { workspace = true }

[[bench]]
name = "doc_ids_topk"
harness = false

[[bench]]
name = "id_materialize_numeric_ff"
harness = false

[[bench]]
name = "search_doc_ids_materialize"
harness = false

[lints]
workspace = true
