[package]
name = "frankensearch-lexical"
version = "0.2.1"
description = "Tantivy BM25 full-text search integration for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
# Shared null-control bench harness (frankensearch_core::bench_support). Never a shipping profile.
bench-internals = ["frankensearch-core/bench-internals"]

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
tempfile = "3"
criterion = { workspace = true }
tantivy = { workspace = true }

[[bench]]
name = "doc_ids_topk"
harness = false

[[bench]]
name = "id_materialize_numeric_ff"
harness = false

[[bench]]
name = "search_doc_ids_materialize"
harness = false

[[bench]]
name = "reopen_id_materialize"
harness = false

[lints]
workspace = true

[[bench]]
name = "tokenizer_char_walk_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "preview_build_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "prefix_source_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "edge_ngrams_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "index_build_postings_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "cjk_bigram_decompose_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "collect_ids_map_kind_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "count_free_gate_terms_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "count_free_idf_gate_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "lexical_candidate_metadata_waste_ab"
harness = false
required-features = ["bench-internals"]
