[package]
name = "frankensearch-ops"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Operations control-plane TUI for frankensearch fleet monitoring"

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-tui = { workspace = true }
fsqlite = { path = "../../../frankensqlite/crates/fsqlite" }
fsqlite-types = { path = "../../../frankensqlite/crates/fsqlite-types" }

# Terminal UI rendering
ratatui = "0.30"
crossterm = "0.29"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

# Structured logging
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = "0.3"

[lints]
workspace = true
