[package]
name = "frankensearch-ops"
version = "0.2.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Operations control-plane TUI for frankensearch fleet monitoring"

[[bin]]
name = "frankensearch-ops"
path = "src/main.rs"

[features]
# Exposes internal pure functions (e.g. the RFC3339 fast path) for A/B microbenches.
bench-internals = []

[[bench]]
name = "percentile_select"
harness = false

[[bench]]
name = "rfc3339_parse_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "correlation_group_ab"
harness = false
required-features = ["bench-internals"]

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-tui = { workspace = true }
fsqlite = "0.1.2"
fsqlite-types = "0.1.2"

# Terminal UI rendering (FrankenTUI)
ftui-core = { workspace = true }
ftui-render = { workspace = true }
ftui-style = { workspace = true }
ftui-text = { workspace = true }
ftui-layout = { workspace = true }
ftui-widgets = { workspace = true }
ftui-tty = { workspace = true }
ftui-backend = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

# Structured logging
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = "0.3"

[lints]
workspace = true
