[package]
name = "frankensearch-quill-gauntlet"
version = "0.2.1"
description = "Dev-only conformance harness for the Quill lexical engine"
publish = false
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
tantivy-oracle = [
    "dep:frankensearch-lexical",
    "frankensearch-lexical/tantivy-oracle",
]

[dependencies]
asupersync = { workspace = true }
frankensearch-core = { workspace = true }
frankensearch-quill = { workspace = true }
frankensearch-lexical = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
asupersync = { workspace = true, features = ["test-internals"] }
frankensearch-quill = { workspace = true, features = ["bench-internals"] }
tempfile = "3.27"

[lints]
workspace = true
