[package]
name = "frankensearch-quill"
version = "0.2.1"
description = "Quill native lexical search engine for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Same-binary A/B helpers are available only to explicit benchmark builds.
bench-internals = ["frankensearch-core/bench-internals"]

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-index = { workspace = true }
asupersync = { workspace = true }
wide = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
compact_str = { workspace = true }
ahash = { workspace = true }
crc32fast = { workspace = true }
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
# Stored metadata stays opaque until result materialization. Durable formats
# never use serde or serde_json.
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
# Deterministic LabRuntime helpers remain test-only.
asupersync = { workspace = true, features = ["test-internals"] }
criterion = { workspace = true }
frankensearch-lexical = { workspace = true, features = ["bench-internals"] }
tempfile = "3.27"
tracing-subscriber = { workspace = true }

[[bench]]
name = "postings_decode_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "term_dictionary_ab"
harness = false
required-features = ["bench-internals"]

[lints]
workspace = true
