[package]
name = "frankensearch-quill"
version = "0.2.1"
description = "Quill native lexical search engine for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Optional FSLX/MANIFEST repair sidecars. Tantivy integration remains outside
# Quill's dependency graph even when durability is enabled.
durability = ["dep:frankensearch-durability"]
# Same-binary A/B helpers are available only to explicit benchmark builds.
bench-internals = ["frankensearch-core/bench-internals"]

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-index = { workspace = true }
frankensearch-durability = { workspace = true, optional = true }
asupersync = { workspace = true }
arc-swap = { workspace = true }
wide = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
compact_str = { workspace = true }
ahash = { workspace = true }
crc32fast = { workspace = true }
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
# Stored metadata stays opaque until result materialization. Durable formats
# never use serde or serde_json.
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs", "process"] }

[dev-dependencies]
# Deterministic LabRuntime helpers remain test-only.
asupersync = { workspace = true, features = ["test-internals"] }
criterion = { workspace = true }
frankensearch-lexical = { workspace = true, features = ["bench-internals"] }
# Dev-only: the legacy `SimpleTokenizer + LowerCaser` arm of the tokenizer A/B
# bench. Already built for this crate transitively via frankensearch-lexical, so
# this adds no compile cost and keeps Tantivy out of Quill's shipped graph.
tantivy = { workspace = true }
tempfile = "3.27"
tracing-subscriber = { workspace = true }

[[bench]]
name = "postings_decode_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "term_dictionary_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "id_map_materialize_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "concat_merge_ab"
harness = false

[[bench]]
name = "tokenizer_simd_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "scribe_flush_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "segment_fanout_ab"
harness = false
required-features = ["bench-internals"]

[lints]
workspace = true
