[package]
name = "frankensearch-rerank"
version = "0.2.2"
description = "Cross-encoder reranking for frankensearch (FlashRank + FastEmbed)"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = []
fastembed-reranker = ["dep:fastembed"]

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
fastembed = { workspace = true, optional = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
tempfile = "3"

[lints]
workspace = true
