[package]
name = "frankensearch-rerank"
version = "0.2.2"
description = "Cross-encoder reranking for frankensearch (pure-Rust frankentorch + FastEmbed)"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = []
fastembed-reranker = ["dep:fastembed"]
# Pure-Rust frankentorch cross-encoder reranker backend (no ONNX/ort).
native = ["dep:ft-api", "dep:ft-autograd", "dep:ft-core", "dep:wide", "dep:rayon"]

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
fastembed = { workspace = true, optional = true }
ft-api = { workspace = true, optional = true }
ft-autograd = { workspace = true, optional = true }
ft-core = { workspace = true, optional = true }
# SIMD-vectorized exp for the attention softmax fast path (native reranker only).
wide = { workspace = true, optional = true }
# Row-parallel attention softmax (native reranker only; intra-forward, never
# doc-level — the sequential doc loop keeps the nested-rayon deadlock impossible).
rayon = { workspace = true, optional = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
tempfile = "3"
criterion = { workspace = true }

# NativeReranker f32 latency benchmark (bd-1nl13.10). Requires the `native`
# feature to see NativeReranker; skips gracefully if the model dir is absent.
[[bench]]
name = "native_rerank"
harness = false
required-features = ["native"]

# Reranker combine-step reorder cost: PureReorder (one sort) vs RrfCombine (fuse+sort).
[[bench]]
name = "combine_reorder_cost_ab"
harness = false

# CLS-only final-layer attention: original m=1 BMM/repack path vs direct rank-1 kernel.
[[bench]]
name = "cls_attention_ab"
harness = false
required-features = ["native"]

# CLS attention SW-prefetch of the strided K/V access: direct rank-1 vs + prefetch.
[[bench]]
name = "cls_attention_prefetch"
harness = false
required-features = ["native"]

[lints]
workspace = true
