[package]
name = "frankensearch-storage"
version = "0.1.0"
description = "FrankenSQLite-backed metadata and embedding job storage for frankensearch"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
fsqlite = { path = "/dp/frankensqlite/crates/fsqlite" }
fsqlite-types = { path = "/dp/frankensqlite/crates/fsqlite-types" }
fsqlite-ext-fts5 = { path = "/dp/frankensqlite/crates/fsqlite-ext-fts5", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }

[features]
fts5 = ["dep:fsqlite-ext-fts5"]

[lints]
workspace = true
