[package]
name = "frankensearch-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared TUI framework for frankensearch products (fsfs, ops TUI)"

[dependencies]
frankensearch-core = { workspace = true }

# Terminal UI rendering
ratatui = "0.30"
crossterm = "0.29"

# Serialization (for keybindings, themes, replay)
serde = { workspace = true }
serde_json = { workspace = true }

# Structured logging
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
