[package]
name = "frankensearch-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared TUI framework for frankensearch products (fsfs, ops TUI)"

[dependencies]
frankensearch-core = { workspace = true }

# Terminal UI rendering (FrankenTUI)
ftui-core = { workspace = true }
ftui-render = { workspace = true }
ftui-style = { workspace = true }
ftui-text = { workspace = true }
ftui-layout = { workspace = true }
ftui-widgets = { workspace = true }

# Serialization (for keybindings, themes, replay)
serde = { workspace = true }
serde_json = { workspace = true }

# Structured logging
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
