[package]
name = "frankensearch-tui"
version = "0.2.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared TUI framework for frankensearch products (fsfs, ops TUI)"

[dependencies]
ahash = { workspace = true }
frankensearch-core = { workspace = true }

# Terminal UI rendering (FrankenTUI)
ftui-core = { workspace = true }
ftui-render = { workspace = true }
ftui-style = { workspace = true }
ftui-text = { workspace = true }
ftui-layout = { workspace = true }
ftui-widgets = { workspace = true }

# Serialization (for keybindings, themes, replay)
serde = { workspace = true }
serde_json = { workspace = true }

# Structured logging
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "palette_filter"
harness = false

[[bench]]
name = "keymap_resolve"
harness = false

[lints]
workspace = true
